crosshair cursor for map
display other information (velocity) in the bottom bar, along with latitude and longitude
using aircrack code for weak scheduling attacks now
kismap files use pdf internally to not screw up vector formats
weak scheduling attack works while scanning
speak again if network found again after 2 minutes
SSIDs are now interpreted as UTF8
windows fade out

06-29-04 mick   speeded up SpinChannelView by using cached bitmaps (very cool!)
                speeded up network view
                fixed a missing connection for nethierarch menu
                
06-26-04 mick   added new vendor/device id for new sitecom wl-022 adapters

06-18-04 mick   macjack & airojack cards can be ejected during scan...

05-22-04 mick   some changes to make atheros driver more stable

05-04-04 mick   added a couple of new vendors in vendor.db
                fixed #59
                updated Spanish translation from Ferdy
                
05-04-04 mick   sheets for loading process too
                join on double click(tm)
                wrote a new installer ;)
                    it includes a simple initial configuration wizard
                added airvast driver (to be tested)

05-03-04 mick   decrypt can now handle windows passwords
                improved weak frame detection
                kismac will ask cards for supported channels

05-02-04 mick   fixed a bug reported by Erik (again :/)
                optimized Newsham attack speed improvement of factor 4 
                moved to sheets for waiting dialogs
                
05-01-04 mick   work on reinjection attack (probably still not working)

04-30-04 mick   added LEAP crack
                gave out 0.11b LEAP with LEAP detection
                
04-24-04 mick   made WPA crack function altivec compatible

04-19-04 mick   added PRF and generate PTK functions

04-18-04 mick   changes at .kismac webservice
                parial WPA implementation

04-16-04 mick   tons of small features and bug fixes