@@ -34,6 +34,7 @@
         <li>Justin from musox.org contributed to the manual, too</li>
         <li>Derrick Brashear wrote the inital GPSd support</li>
         <li>Vincent Malguy translated KisMAC to French</li>
+        <li>Robin Darroch wrote a patch to show more GPS informations</li>
 </ul>
 </DIV>
 </BODY>
