@@ -21,6 +21,7 @@ weak scheduling attack works while scanning
 speak again if network found again after 2 minutes
 SSIDs are now interpreted as UTF8
 windows fade out
+applied robin darroches patches for gpscontroller
 
 06-29-04 mick   speeded up SpinChannelView by using cached bitmaps (very cool!)
                 speeded up network view
